removed unneeded examples

--- a/app/app.html
+++ b/app/app.html
@@ -44,5 +44,13 @@
                 );
             }
         </script>
+        <script>
+            var cet = require('custom-electron-titlebar');
+            new cet.Titlebar({
+                backgroundColor: cet.Color.fromHex('#37474f'),
+                overflow: 'hidden'
+                // icon: './icon.png'
+            });
+        </script>
     </body>
 </html>
