--- a/app/app.html
+++ b/app/app.html
@@ -40,8 +40,8 @@
             var cet = require('custom-electron-titlebar');
             new cet.Titlebar({
                 backgroundColor: cet.Color.fromHex('#37474f'),
-                overflow: 'hidden'
-                // icon: './icon.png'
+                overflow: 'hidden',
+                icon: './icon.png'
             });
         </script>
     </body>
